--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,12 @@
   frame=single
 }
 
+\lstdefinestyle{output}{
+    basicstyle={\small\ttfamily},
+    numbers=none,
+    frame=none
+}
+
 \usepackage{biblatex}
 \addbibresource{refs.bib}
 
