Commit before merging

--- a/latex_report/1_ly_thuyet.tex
+++ b/latex_report/1_ly_thuyet.tex
@@ -30,7 +30,7 @@ Ma trận A được gọi là ảnh số, mỗi thành phần của A được 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.75\linewidth]{images/gray_scale_resolution.jpg}
+    \includegraphics[width=.75\linewidth]{../images/gray_scale_resolution.jpg}
     \caption{Ảnh xám với các độ phân giải mức xám khác nhau}
     \label{fig:gray_scale_resolution}
 \end{figure}
@@ -100,7 +100,7 @@ Các nguồn nhiễu Gauss chính trong ảnh số phát sinh trong quá trình 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\linewidth]{images/salt_and_pepper_noise.png}
+    \includegraphics[width=0.5\linewidth]{../images/salt_and_pepper_noise.png}
     \caption{Một ảnh với nhiễu muối tiêu}
     \label{fig:salt_and_pepper_noise}
 \end{figure}
@@ -123,7 +123,7 @@ Trong đó $a = 0$ và $b = 255$ đối với ảnh mức xám 8 bit.
 
 % \begin{figure}[H]
 %     \centering
-%     \includegraphics[width=0.75\linewidth]{images/periodic_noise.jpg}
+%     \includegraphics[width=0.75\linewidth]{../images/periodic_noise.jpg}
 %     \caption{Một ảnh với nhiễu tuần hoàn}
 %     \label{fig:periodic_noise}
 % \end{figure}
