--- a/latex_report/2_cong_cu.tex
+++ b/latex_report/2_cong_cu.tex
@@ -39,6 +39,6 @@ Các thông số kỹ thuật chính:
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\linewidth]{images/rpi3.png}
+    \includegraphics[width=0.75\linewidth]{../images/rpi3.png}
     \caption{Bộ kit Raspberry Pi 3 Model B}
 \end{figure}
