--- a/latex_report/main.tex
+++ b/latex_report/main.tex
@@ -82,7 +82,7 @@
 \renewcommand{\refname}{Tài liệu tham khảo} % For articles
 \renewcommand{\listfigurename}{Danh sách hình minh họa}
 
-\input{title}
+\input{title.tex}
 
 \pagenumbering{roman}
 \tableofcontents
