--- a/latex_report/title.tex
+++ b/latex_report/title.tex
@@ -8,7 +8,7 @@
     	\textbf{TRƯỜNG ĐẠI HỌC BÁCH KHOA}\\ 
     	
     	\vspace{1.5cm}
-    	\includegraphics[width=4cm]{images/logo_BK.png}
+    	\includegraphics[width=4cm]{../images/logo_BK.png}
     	\vspace{0.5cm}
     \end{center}
     
