Added conclusions and references

--- a/latex_report/1_ly_thuyet.tex
+++ b/latex_report/1_ly_thuyet.tex
@@ -4,7 +4,7 @@
 
 Ảnh $f(x,y)$ được miêu tả bằng những mẫu cách đều nhau ở dạng ma trận $(N-M)$:
 
-$$f(x,y) \begin{bmatrix}
+$$f(x,y) = \begin{bmatrix}
 f(0,0) & f(0,1) & \cdots & f(0,M-1) \\
 f(1,0) & f(1,1) & \cdots & f(1,M-1) \\
 \cdots & \cdots & \cdots & \cdots \\
