--- a/latex_report/3_thi_nghiem.tex
+++ b/latex_report/3_thi_nghiem.tex
@@ -234,7 +234,7 @@ kết quả lọc từ MATLAB và từ Python trên Raspberry Pi 3 là giống n
 
 \subsection{Lọc nhiễu ảnh Gauss}
 
-\subsubsection{Tạo ảnh nhiễu Gauss}
+\subsubsection{Tạo ảnh nhiễu Gauss trên MATLAB}
 
 Ta đọc một ảnh gốc (ảnh màu hoặc ảnh xám), chuyển sang ảnh xám nếu cần, crop ảnh xuống $256 \times 256$ để thuận tiện cho việc xử lý. Cuối cùng, ta tạo nhiễu muối tiêu cho ảnh bằng hàm \texttt{imnoise} có sẵn của MATLAB.
 
