--- a/latex_report/main.tex
+++ b/latex_report/main.tex
@@ -75,7 +75,7 @@
 }
 
 \usepackage{biblatex}
-\addbibresource{refs.bib}
+\addbibresource{../refs.bib}
 
 \begin{document}
 % \renewcommand{\bibname}{Tài liệu tham khảo} % For books, reports
