--- a/latex_report/2_cong_cu.tex
+++ b/latex_report/2_cong_cu.tex
@@ -2,6 +2,7 @@
 
 \subsection{Phần mềm và phần cứng}
 
+\textbf{Phần cứng}:
 \begin{itemize}
     \item Bộ kit Raspberry Pi 3
     \item Màn hình, chuột, bàn phím (tùy chọn)
@@ -10,6 +11,18 @@
 Ta có thể không cần dùng màn hình, chuột, bàn phím 
 bằng cách tiền cấu hình tên người dùng, tên miền máy chủ, kết nối mạng... trước khi cài đặt 
 và đăng nhập và điều khiển Raspberry Pi từ xa thông qua giao thức SSH hoặc VNC.
+
+\textbf{Phần mềm}: Các phiên bản phần mềm và thư viện trong đề tài này là:
+\begin{itemize}
+    \item MATLAB R2023a trên máy tính
+    \item Python 3.12 trên Raspberry Pi 3, với các module chính:
+    \begin{itemize}
+        \item numpy 1.26.4
+        \item matplotlib 3.8.0
+        \item opencv-python 4.9.0.80
+        \item scipy 1.13.0
+    \end{itemize}
+\end{itemize}
 
 \subsection{Giới thiệu bộ kit Raspberry Pi 3}
 
